--- a/sample-zookeeper/pom.xml
+++ b/sample-zookeeper/pom.xml
@@ -2,11 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.github.omnbmh.samples</groupId>
-	<artifactId>samples-zookeeper</artifactId>
+	<groupId>org.github.omnbmh.sample</groupId>
+	<artifactId>sample-zookeeper</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>samples-zookeeper</name>
+	<name>SampleZookeeper</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
-			<version>3.4.9</version>
+			<version>3.4.14</version>
 		</dependency>
 		<dependency>
 			<groupId>io.grpc</groupId>
