--- a/samples-hprose/spring-boot-server/pom.xml
+++ b/samples-hprose/spring-boot-server/pom.xml
@@ -1,17 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>hprose-examples</artifactId>
-        <groupId>org.github.omnbmh.hprose.examples</groupId>
+        <groupId>org.github.omnbmh.samples.hprose</groupId>
+        <artifactId>samples-hprose</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>spring-boot-server</artifactId>
     <packaging>jar</packaging>
 
     <name>spring-boot-server</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,21 +17,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.github.omnbmh.hprose.examples</groupId>
+            <groupId>org.github.omnbmh.samples.hprose</groupId>
             <artifactId>iserver</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.github.omnbmh.hprose.examples</groupId>
+            <groupId>org.github.omnbmh.samples.hprose</groupId>
             <artifactId>zookeeper-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.34</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../lib/mysql-connector-java-5.1.34.jar</systemPath>
+            <version>8.0.16</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
